syntax="proto3";

option java_package = "io.github.zeus.rpc";
option java_multiple_files = true;

message ZeusCatalog {
    repeated ZeusDBSchema db_schemas = 1;
}

message ZeusDBSchema {
    string name = 1;
    int32 id = 2;
    map<int32, ZeusTableSchema> tables = 3;
    uint32 version = 4;
}

message ZeusTableSchema {
    string name = 1;
    int32 id = 2;
    map<int32, ZeusColumnSchema> columns = 3;
    string format = 4; // storage engine name
}

enum ColumnType {
    BOOL = 0;
    INT8 = 1;
    INT16 = 2;
    INT32 = 3;
    INT64 = 4;
    FLOAT4 = 5;
    FLOAT8 = 6;
    TIMESTAMP = 7;
    STRING = 8;
}

message ColumnValue {
    string string_value = 1;
    float float_value = 2;
    int32 i32_value = 3;
    int64 i64_value = 4;
    bool bool_value = 5;
    double double_value = 6;
}

message ZeusColumnSchema {
    string name = 1;
    int32 id = 2;
    ColumnType column_type = 3;
}

message GetSchemaRequest {
    string db_name = 1;
}

message GetSchemaResponse {
    ZeusDBSchema db_schema = 1;
}

service ZeusMetaService {
    rpc GetDBSchema(GetSchemaRequest) returns (GetSchemaResponse){}
}
